--- a/Cinema/View/MovieTableViewCell.xib
+++ b/Cinema/View/MovieTableViewCell.xib
@@ -1,21 +1,77 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModule="Cinema" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="149.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="663-Mj-Lua">
+                        <rect key="frame" x="10" y="5" width="90" height="120"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="663-Mj-Lua" secondAttribute="height" multiplier="3:4" id="8x5-ga-Gdc"/>
+                            <constraint firstAttribute="width" constant="90" id="C5g-A3-BuO"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4vp-Nn-Dnp">
+                        <rect key="frame" x="108" y="11" width="202" height="19.5"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k8w-1T-CDk">
+                        <rect key="frame" x="108" y="32.5" width="202" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5pW-Ar-ECH">
+                        <rect key="frame" x="269" y="122" width="35" height="17"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="5pW-Ar-ECH" secondAttribute="trailing" constant="16" id="9re-G1-79N"/>
+                    <constraint firstItem="4vp-Nn-Dnp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="Gm6-Ve-skN"/>
+                    <constraint firstAttribute="trailing" secondItem="k8w-1T-CDk" secondAttribute="trailing" constant="10" id="RW2-11-4et"/>
+                    <constraint firstItem="5pW-Ar-ECH" firstAttribute="top" relation="greaterThanOrEqual" secondItem="k8w-1T-CDk" secondAttribute="bottom" id="RgP-5P-y1T"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="663-Mj-Lua" secondAttribute="bottom" constant="4.5" id="Wlf-mD-7HR"/>
+                    <constraint firstAttribute="trailing" secondItem="4vp-Nn-Dnp" secondAttribute="trailing" constant="10" id="az5-KQ-Ans"/>
+                    <constraint firstItem="4vp-Nn-Dnp" firstAttribute="leading" secondItem="663-Mj-Lua" secondAttribute="trailing" constant="8" id="bJk-jK-Phw"/>
+                    <constraint firstItem="k8w-1T-CDk" firstAttribute="top" secondItem="4vp-Nn-Dnp" secondAttribute="bottom" constant="2" id="fcG-aW-nhj"/>
+                    <constraint firstItem="5pW-Ar-ECH" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="663-Mj-Lua" secondAttribute="trailing" constant="10" id="hdX-7e-RCr"/>
+                    <constraint firstItem="k8w-1T-CDk" firstAttribute="leading" secondItem="4vp-Nn-Dnp" secondAttribute="leading" id="sjD-Ex-CWs"/>
+                    <constraint firstAttribute="bottom" secondItem="5pW-Ar-ECH" secondAttribute="bottom" constant="10.5" id="sze-YC-LrT"/>
+                    <constraint firstItem="663-Mj-Lua" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="uAN-nL-ElN"/>
+                    <constraint firstItem="663-Mj-Lua" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="yaW-9N-JtJ"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="descLabel" destination="k8w-1T-CDk" id="ZTa-Qk-omr"/>
+                <outlet property="mImageView" destination="663-Mj-Lua" id="HTr-jc-ed9"/>
+                <outlet property="timeLabel" destination="5pW-Ar-ECH" id="oQL-Xa-cpO"/>
+                <outlet property="titleLabel" destination="4vp-Nn-Dnp" id="9f4-Az-s86"/>
+            </connections>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="placeholder" width="500" height="500"/>
+    </resources>
 </document>
