--- a/Cinema/View/MovieTableViewCell.xib
+++ b/Cinema/View/MovieTableViewCell.xib
@@ -39,19 +39,19 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4vp-Nn-Dnp">
                         <rect key="frame" x="108" y="11" width="202" height="19.5"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k8w-1T-CDk">
                         <rect key="frame" x="108" y="32.5" width="202" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5pW-Ar-ECH">
                         <rect key="frame" x="269" y="122" width="35" height="17"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -82,10 +82,10 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="descLabel" destination="k8w-1T-CDk" id="ZTa-Qk-omr"/>
+                <outlet property="detailLabel" destination="4vp-Nn-Dnp" id="9f4-Az-s86"/>
                 <outlet property="mBgImage" destination="Iy6-qP-h7j" id="kgT-RX-8ki"/>
                 <outlet property="mImageView" destination="663-Mj-Lua" id="HTr-jc-ed9"/>
                 <outlet property="timeLabel" destination="5pW-Ar-ECH" id="oQL-Xa-cpO"/>
-                <outlet property="titleLabel" destination="4vp-Nn-Dnp" id="9f4-Az-s86"/>
             </connections>
         </tableViewCell>
     </objects>
